[build-system]
requires = ["flit_core >=3.3,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ibis-heavyai"
version = "1.1"
requires-python = ">=3.7"
authors = [{name = "Heavy.AI", email = "community@heavy.ai"}]
description = "Ibis HeavyDB backend"
readme = "README.md"
license = {file = "LICENSE.md"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "ibis-framework >=2.0",
    "heavyai",
    "rbc-project >=0.8.0",
    "pyarrow >=3.0.0",
    "regex",
    "pandas",
    "shapely",
    "geopandas",
    "importlib_metadata",  # drop for python >3.7
    "packaging"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "mock",
]

dev = [
    "ibis-heavyai[test]",
    "pre-commit",
    "flit"
]

[project.urls]
Home = "https://github.com/heavyai/ibis-heavyai"
Source = "https://github.com/heavyai/ibis-heavyai"

[project.entry-points."ibis.backends"]
heavyai = "ibis_heavyai"

[tool.flit.module]
name = "ibis_heavyai"

[tool.flit.sdist]
exclude = [
    "ci/*", ".github/*", "*.yaml", ".*", "ibis_heavyai/tests/*", "docs/*"
]

[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ["py37", "py38", "py39", "py310"]

[tool.isort]
ensure_newline_before_comments = true
line_length = 79
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rsx -v"
testpaths = [
    "ibis_heavyai/tests",
]
markers = [
    "backend",
    "udf",
    "geo",
    "xfail_backends",  # replaced by notyet ibis>2.1.2
    "notyet",
    "xfail_unsupported",
    "skip_backends",
    "xpass_backends",
    "only_on_backends",  # replaced by notimpl ibis>2.1.2
    "notimpl",
    "min_spark_version",
    "never",
    "broken",
    "sqlite",
    "pyspark",
    "postgres",
    "pandas",
    "mysql",
    "impala",
    "duckdb",
    "datafusion",
    "dask",
    "clickhouse",
    "heavyai",
]
