[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "ibis_omniscidb/_version.py"

[mypy]
ignore_missing_imports=True

[pydocstyle]
convention=numpy

[isort]
known_third_party =
ensure_newline_before_comments=true
line_length = 79
multi_line_output = 3
include_trailing_comma = true

[tool:pytest]
markers =
    backend
    udf
    geo
    xfail_backends
    xfail_unsupported
    skip_backends
    xpass_backends
    only_on_backends
    skip_missing_feature
    omniscidb
    min_spark_version
